# svalue

./: Cargo.toml
src/: Bittrex.rs  Huobi.rs  Kraken.rs  adapter_core.rs  exchange.rs  huobi_test.rs  lib.rs  main.rs
src/exchanges/: bittrex.rs  huobi.rs  kraken.rs  manager.rs  mod.rs
