[package]
name = "svalue"
version = "0.1.0"
authors = ["Chris (Someguy123) <info@someguy123.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rocket = "0.4.6"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tokio-core = "0.1"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
rust_decimal = "1.0"
